// Vitest Snapshot v1

exports[`(components) anchor button > (icon) take snapshot 1`] = `
<div>
  <a
    class="_enshita-button-box_8w723_17 undefined"
    href="#"
    rel="noopener noreferrer"
    role="button"
    target="_blank"
  >
    <div
      class="_enshita-button-icon-box_8w723_1 undefined"
    >
      <span />
    </div>
    <p
      class="_enshita-button-text_8w723_36 undefined"
    >
      This is test
    </p>
  </a>
</div>
`;

exports[`(components) anchor button > (normal) take snapshot 1`] = `
<div>
  <a
    class="_enshita-button-box_8w723_17 undefined"
    href="#"
    rel="noopener noreferrer"
    role="button"
    target="_blank"
  >
    <p
      class="_enshita-button-text_8w723_36 undefined"
    >
      This is test
    </p>
  </a>
</div>
`;
